# momentum-rotation-engine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: evaluation_spec.md  specification-v1.md
docs/reports/: 01_window_and_proxy_report.md  02_cash_drag_report.md  03_correlation_report.md  04_exposure_report.md  05_comparison_report.md  comparison_nav.csv  crash_periods.csv  primary_metrics.json  rolling_momentum_v1.csv  rolling_static_equal_weight.csv  rolling_static_inverse_vol.csv
docs/research/: blend_metrics.json  blend_nav.csv  blend_worst_periods.csv  core_plus_sleeve.md  core_plus_sleeve_report.md
examples/: run_backtest.py
scripts/: run_backtest.py  run_comparison.py  run_core_plus_sleeve.py
src/momentum_agent/: __init__.py  config.py  events.py
src/momentum_agent/backtest/: __init__.py  calendar.py  engine.py
src/momentum_agent/broker/: __init__.py  base.py  simulated.py
src/momentum_agent/data/: __init__.py  freeze.py  loader.py  proxy.py  validator.py
src/momentum_agent/portfolio/: __init__.py  reconciliation.py  state.py
src/momentum_agent/reporting/: __init__.py  daily_nav.py  metrics.py  trade_log.py
src/momentum_agent/risk/: __init__.py  kill_switch.py  state_machine.py  stops.py
src/momentum_agent/strategies/momentum/: __init__.py  selection.py  signals.py  weights.py
tests/: conftest.py  test_broker.py  test_freeze.py  test_momentum.py  test_reconciliation.py  test_risk.py  test_trade_log.py
