[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "momentum-rotation-engine"
version = "1.0.0"
description = "Deterministic momentum-based ETF rotation engine with full backtesting framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pandas-market-calendars>=4.3.0",
    "yfinance>=0.2.36",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/momentum_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.metadata]
allow-direct-references = true
